--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
     <div class="notes" id="app">
-        <div class="notes__sidebar">
-            <button class="notes__add" type="button">Add Note</button>
-            <div class="notes__list">
-                <div class="notes__list-item notes__list-item--selected">
-                    <div class="notes__small-title">Lecture Notes</div>
-                    <div class="notes__small-body">I learning today</div>
-                    <div class="notes__small-updated">Thursday 3pm</div>
+        <div class="notes-sidebar">
+            <button class="notes-add" type="button">Add Note</button>
+            <div class="notes-list">
+                <div class="notes-list-item notes-list-item--selected">
+                    <div class="notes-small-title">Lecture Notes</div>
+                    <div class="notes-small-body">I learning today</div>
+                    <div class="notes-small-updated">Thursday 3pm</div>
                 </div>
             </div>
         </div>
-        <div class="notes__preview">
-            <input class="notes__title" type="text" placeholder="Enter a title">
-            <textarea class="notes__body"> Type a text here</textarea>
+        <div class="notes-preview">
+            <input class="notes-title" type="text" placeholder="Enter a title">
+            <textarea class="notes-body"> Type a text here</textarea>
         </div>        
     </div>
 </body>
